--- a/Talk5/Seminar-Arbeit.tex
+++ b/Talk5/Seminar-Arbeit.tex
@@ -33,7 +33,7 @@ The Free Dictionary defines file storage as follows:
 \begin{quote}
 A generic term for warehousing electronic files. It may refer to local storage in a PC or tablet or remote storage on the Internet. The primary storage devices are hard drives and solid state drives. \cite{thefreedictionary}
 \end{quote}
-To begin with, an overview of the different approaches to file storage and some historical aspects will be given. There are basically three different file storage generations classified. From here on, it will be spoken about distributed file storage (DFS), which means that file storage is not managed by only one system that is geographically constraint. The term \textit{cloud} is a metaphorical synonym for DFS is alluded.
+First of all, an overview of the different approaches to file storage and some historical aspects will be given. There are basically three different file storage generations classified. From here on, it will be spoken about distributed file storage (DFS), which means that file storage is not managed by only one system that is geographically constraint. The term \textit{cloud} is a metaphorical synonym for DFS is alluded.
 
 Firstly, \textit{Client-Server file storage} will be described, also called \textbf{1st generation DFS}, systems where the cloud consists of one or multiple huge file server storing all the files of multiple clients being on the same network are addressed. The main problem in such systems is that the file server itself acts as a \textit{single point of failure} and, thus, becomes a \textit{bottleneck}, as illustrated in Figure \ref{1st_gen_dfs}.
 
@@ -46,22 +46,23 @@ The \textbf{3rd generation DFS}, namely \textit{P2P systems}, in general do not 
 	\begin{minipage}{.33\textwidth}
 		\centering
 		\includegraphics[scale=0.175]{Talk5/1st_gen_dfs.PNG}
-		\captionof{figure}{1st gen. DFS \cite{wikimedia:p2p}}
+		\caption[myfakelabel]{1st gen. DFS\footnotemark[1]{}}
 		\label{1st_gen_dfs}
 	\end{minipage}%
 	\begin{minipage}{.33\textwidth}
 		\centering
 		\includegraphics[scale=0.175]{Talk5/2nd_gen_dfs.PNG}
-		\captionof{figure}{2nd gen. DFS}
+		\caption[myfakelabel]{2nd gen. DFS}
 		\label{2nd_gen_dfs}
 	\end{minipage}
 	\begin{minipage}{.33\textwidth}
 		\centering
 		\includegraphics[scale=0.175]{Talk5/3rd_gen_dfs.PNG}
-		\captionof{figure}{3rd gen. DFS \cite{wikimedia:p2p}}
+		\caption[myfakelabel]{3rd gen. DFS\footnotemark[1]{}}
 		\label{3rd_gen_dfs}
 	\end{minipage}
 \end{figure}
+\footnotetext[1]{Peer-to-peer; http://en.wikipedia.org/wiki/Peer\_to\_peer, online accessed at April, 2015.}
 
 As each approach of distributed file storage has its benefits, there is no system without drawbacks or even constraints. This is one of the main reasons why first and second generation DFS are still omnipresent, but P2P technology is on the increase as technology progresses and acceptance and mistrust of society disappears. %% REFERENCE
 
@@ -177,6 +178,34 @@ A system should be available for use or at least available in near future. Also 
 \label{comparisons}
 In this section, we classify and compare four exemplary P2P file storage systems according to the classification criteria given in the preceding section. We also compare the P2P file storage to a popular distributed file storage system to find similarities and differences. Beginning with the well known service Dropbox, moving on to Storj, Hive2Hive, BitTorrent Sync and finally AeroFS. At the end, highlight the findings in a table comparing the file storage systems with each other.
 
+\subsection{Dropbox}
+\label{subsec:dropbox}
+As a comparison to the previously described P2P systems the well-known file hosting service Dropbox that was founded in 2007 will be used as representation for classical cloud storage solutions and measured according to the same criteria. Both cloud storage and file synchronization are possible with this service with again both browser-based and a client application.
+
+\textbf{Peering Scheme:} Dropbox does not use any P2P technology but rather a client-server system. The data is stored in the Amazon S3 cloud. An accounting system is provided and users can give other users access to their data with either read-only or read and write permission. Folders and files can be shared by link or by username (registration required).
+
+\textbf{Encryption:} The stored data is encrypted with AES-256 and upload and download to the servers is encrypted. The main critique point is that Dropbox stores the decryption keys on the same servers where the files are stored and thus any administrator has insight into the data.
+
+\textbf{Trust \& Integrity:} There is no mechanism for trust except the user credentials. But as already mentioned, gaining access to the data is no big deal.
+
+\textbf{Payment Scheme:} Dropbox employs a Freemium model where base use is free and more storage can be aquired through a paid subscription.
+\begin{enumerate}[(a)]
+	\item Dropbox Basic - free - 2 GB
+	\item Dropbox Pro - 10 Euro / month - 1 TB
+	\item Dropbox for Business - 12 Euro / month - unlimited
+\end{enumerate}
+
+\textbf{Fairness:} Fairness is not applicable.
+
+\textbf{Fault-tolerance and Availability:} Dropbox servers act as single point of failure.
+
+\textbf{Distribution of Service:} Available through their website but a GUI application also exists.
+
+\textbf{Source code availability:} Closed source.
+
+\textbf{User base:} Around 300 mio. (29.05.2014)\cite{dropbox:userbase}.
+
+\textbf{Status:} Available for usage.
 \subsection{Storj}
 \label{subsec:storj}
 Storj (pronounced storage) is a completely decentralized and blockchain-based P2P cloud storage system with it's major concern for security and efficiency. Being launched in July 2014, it includes a P2P payment system service similar to Bitcoin \cite{storj:blog:what_is_storj}. Storj mainly consists of two applications, namely DriveShare (also called Driveminer) and Metadisk. The former uses unused hard drive space of users and the latter is a web-service used for file storage and sharing. Storj suggests that the average user has a lot of unused hard drive space and for many systems a user pays for a specific amount of space even if he or she doesn't use it at all. Storj further claims a user is only obliged to pay for his used space and thus will be much cheaper than any other available cloud storage.
@@ -291,6 +320,7 @@ The latest known number from 2014 claims a user base of 10 million users.
 As of March 2015, Sync is fully released to the public.
 
 \subsection{AeroFS}
+
 \label{subsec:Aerofs}
 AeroFS is a dedicated software client from Air Computing providing basic P2P solutions but some advanced functionality concerning advanced security and encryption, error and data loss prevention and intends to provide the service at low costs. AeroFS is mainly targeted towards business users and companies who need a secure file backup and synchronization service \cite{aerofs}. AeroFS in addition claims to be the 'P2P version' of Dropbox.
 
@@ -333,37 +363,10 @@ Fairness in the sense of peer to peer is not applicable or not relevant since a 
 
 \textbf{Status:} Available for use and costs-free (depending on type of use).
 
-\subsection{Dropbox}
-\label{subsec:dropbox}
-As a comparison to the previously described P2P systems the well-known file hosting service Dropbox that was founded in 2007 will be used as representation for classical cloud storage solutions and measured according to the same criteria. Both cloud storage and file synchronization are possible with this service with again both browser-based and a client application.
-
-\textbf{Peering Scheme:} Dropbox does not use any P2P technology but rather a client-server system. The data is stored in the Amazon S3 cloud. An accounting system is provided and users can give other users access to their data with either read-only or read and write permission. Folders and files can be shared by link or by username (registration required).
-
-\textbf{Encryption:} The stored data is encrypted with AES-256 and upload and download to the servers is encrypted. The main critique point is that Dropbox stores the decryption keys on the same servers where the files are stored and thus any administrator has insight into the data.
-
-\textbf{Trust \& Integrity:} There is no mechanism for trust except the user credentials. But as already mentioned, gaining access to the data is no big deal.
-
-\textbf{Payment Scheme:} Dropbox employs a Freemium model where base use is free and more storage can be aquired through a paid subscription.
-\begin{enumerate}[(a)]
-	\item Dropbox Basic - free - 2 GB
-	\item Dropbox Pro - 10 Euro / month - 1 TB
-	\item Dropbox for Business - 12 Euro / month - unlimited
-\end{enumerate}
-
-\textbf{Fairness:} Fairness is not applicable.
-
-\textbf{Fault-tolerance and Availability:} Dropbox servers act as single point of failure.
-
-\textbf{Distribution of Service:} Available through their website but a GUI application also exists.
-
-\textbf{Source code availability:} Closed source.
-
-\textbf{User base:} Around 300 mio. (29.05.2014)\cite{dropbox:userbase}.
-
-\textbf{Status:} Available for usage.
 
 \section{Summary and Conclusions}
-\begin{table}
+%% Some text that referrs to the table
+\begin{sidewaystable}
 	\centering
 	\caption{Comparison of four different P2P Systems in comparison to Dropbox}
 		\begin{tabular}{ | *{6}{ p{2.5cm} |} }
@@ -380,23 +383,41 @@ As a comparison to the previously described P2P systems the well-known file host
 			Fault-Tolerance & Single point of failure & Replication of shards & Copy of each file on each synced device / Backup on Team Server & File chuncks replicated & Copy of each file on each synced device \\ \hline
 			Status & Available & Beta & Available & Active development & Available \\ \hline
 		\end{tabular}
-\end{table}
+\end{sidewaystable}
 
 The results of the research show that P2P developers have found many different solutions to face the problems that come up when developing and constructing such a system. Thus to simplify implementation there is almost always a specialization of the software for a specific use. To benefit from one aspect of peering scheme it might be inevitable to afford drawbacks and constraints in another aspect. Concretely one could imagine a slider going from e.g. left, Fault tolerance to right, Availability and every developer have to decide where to place his slider between because it is not possible to have them both on 100 percent. Publisher often care about a specific application area, e.g., business use or file synchronization and thus the 'sliders' have to be set as appropriate as possible for every system. Further, a clear separation between file synchronization and file storage need to be made. P2P systems are able to do both but depending on the choice of specialization, doing both might no always be as easy.
 
 As a conclusion of the facts described above P2P systems as well as client-server models do not solve all problems and requirements of file storage and synchronization. One has to always live with some constraints or privacy issues, e.g. the huge gap between trusting a (well known) storage provider versus a (anonymous) peer. P2P does not automatically mean that the single point of failure problem is solved, many P2P systems are not really better than traditional cloud storage systems in this term. The 3rd generation DFS certainly have to deal with some problems traditional client-server models do not, e.g., vulnerability to specialized attacks (e.g., sybil attacks).
 
 \begin{thebibliography}{99}
+
+	\bibitem {p2p:definition}
+		R. Schollmeier:
+		\emph{A Definition of Peer-to-Peer Networking for the Classification of Peer-to- Peer Architectures and Applications;}
+		\url{http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=990434&tag=1},
+		online accessed at April, 2015.
+
 	\bibitem {aerofs}
 		\emph{AeroFS}
 		\url{https://www.aerofs.com/},
-		March, 2015.
+		online accessed at March, 2015.
 
+	\bibitem {aerofs:security_2}
+		\emph{AeroFS: Das bessere Dropbox? - Golem.de;}
+		\url{http://www.golem.de/news/aerofs-das-bessere-dropbox-1304-98485.html},
+		online accessed at April, 2015.
+
+	\bibitem {aerofs:blog:30_users_free}
+		Y. Sagalov:
+		\emph{AeroFS is now free up to 30 users;}
+		\url{https://www.aerofs.com/blog/aerofs-is-now-free-up-to-30-users/},
+		online accessed at April, 2015.
+		
 	\bibitem {bitcoin}
 		S. Nakamoto:
 		\emph{Bitcoin: A Peer-to-Peer Electronic Cash System;}
 		\url{https://bitcoin.org/bitcoin.pdf},
-		October, 2008.
+		online accessed at April, 2015.
 
 	\bibitem {bittorrentsync-2}
 		J. Farina, M. Scanlon, M. Kechadi:
@@ -409,180 +430,157 @@ As a conclusion of the facts described above P2P systems as well as client-serve
 		A. Lareida, T. Bocek, S. Golaszewski, C. L\"uthold, M. Weber:
 		\emph{Box2Box - A P2P-based File-Sharing and Synchronization Application;}
 		\url{http://www.csg.uzh.ch/csg/live/teaching/FS13/p2p/challenge/P2P2013DP_017.pdf},
-		September, 2013.
+		online accessed at April, 2014.
 
-	\bibitem {hive2hive}
-		\emph{Hive2Hive: Open-Source Library for P2P-based File Synchronization and Sharing;}
-		\url{http://hive2hive.com/},
-		March, 2015.
+	\bibitem {dropbox:userbase}
+		\emph{Dropbox Reaches 300M Users;}
+		\url{http://thenextweb.com/insider/2014/05/29/dropbox-reaches-300m-users-adding-100m-users-just-six-months/},
+		online accessed at April, 2015.
+
+	\bibitem {aerofs:cloud_types}
+		\emph{Enterprise Solution - Deployment Options, AeroFS;}
+		\url{https://www.aerofs.com/features/deployment-options/},
+		online accessed at April, 2015.
+
+	\bibitem {thefreedictionary}
+		\emph{File Storage Definition;}
+		\url{http://encyclopedia2.thefreedictionary.com/file+storage},
+		online accessed at April, 2015.
+
+	\bibitem {aerofs:peering_scheme_2}
+		\emph{Flexible Storage for the Enterprise;}
+		\url{https://www.aerofs.com/features/flexible-storage/},
+		online accessed at April, 2015.
 
 	\bibitem {hive2hive:about}
 		\emph{Hive2Hive: About Us;}
 		\url{https://github.com/Hive2Hive/Hive2Hive/wiki/About-Us},
-		March, 2015.
+		online accessed at March, 2015.
 
 	\bibitem {hive2hive:github}
 		\emph{Hive2Hive: Java library for secure, distributed, P2P-based file synchronization and sharing;}
 		\url{https://github.com/Hive2Hive},
-		March, 2015.
-
+		online accessed at March, 2015.
 	(https://github.com/tomp2p/TomP2P) (https://github.com/PeerWasp/PeerWasp)
+
+	\bibitem {hive2hive}
+		\emph{Hive2Hive: Open-Source Library for P2P-based File Synchronization and Sharing;}
+		\url{http://hive2hive.com/},
+		online accessed at March, 2015.
 
 	\bibitem {metadisk}
 		S. Wilkinson, J. Lowry:
 		\emph{Metadisk: Blockchain-based decentralized file storage application;}
 		\url{http://metadisk.org/metadisk.pdf},
-		December, 2014.
-
+		online accessed at April, 2014.
+		
 	\bibitem {p2pfswu}
 		C. Wu:
 		\emph{Peer-to-Peer Networks;}
 		\url{http://www.csie.nuk.edu.tw/~wuch/course/csf641/csf641-04-storage.pdf},
-		March, 2015.
+		online accessed at March, 2015.
 
 	\bibitem {p2pfskangasharju}
 		J. Kangasharju:
 		\emph{Peer-to-Peer Networks Chapter 4: Peer-to-Peer Storage;}
 		\url{http://www.cs.helsinki.fi/u/jakangas/Teaching/P2P/P2P-04-Storage.pdf},
-		March, 2015.
-
-	\bibitem {storj:PDF}
-		S. Wilkinson:
-		\emph{Storj A Peer-to-Peer Cloud Storage Network;}
-		\url{http://storj.io/storj.pdf/},
-		December, 2014.
-
-	\bibitem {bittorrentsync}
-		\emph{Sync;}
-		\url{https://www.getsync.com/},
-		March, 2015.
-		
-	\bibitem {storj:blog:what_is_storj}
-		\emph{What ist Storj?;}
-		\url{http://blog.storj.io/post/87251450053/what-is-storj},
-		March, 2015.
-		
-	\bibitem {storj:deck}
-		\emph{Storj - The Crowdsale;}
-		\url{http://storj.io/crowdsale.html},
-		March, 2015.
-		
-	\bibitem {storj:crowdsale}
-		\emph{Storj Deck - Decentralized Cloud;}
-		\url{http://storj.io/Deck.pdf},
-		April, 2015.
-
-	\bibitem {storj:github}
-		\emph{Storj Labs;}
-		\url{https://github.com/Storj/},
-		March, 2015.
-		
-	\bibitem {p2p-introduction:tomp2p}
-		\emph{TomP2P: A P2P-based high performance key-value pair storage library;}
-		\url{http://tomp2p.net/doc/p2p/},
-		April, 2015.
-		
-	\bibitem {storj:forum}
-		\emph{Storjtalk;}
-		\url{https://storjtalk.org/},
-		April, 2015.
-		
-	\bibitem {storj:earlyaccess}
-		\emph{Storj - Early Access;}
-		\url{http://storj.io/earlyaccess.html},
-		April, 2015.
-		
-	\bibitem {aerofs:blog:30_users_free}
-		Y. Sagalov:
-		\emph{AeroFS is now free up to 30 users;}
-		\url{https://www.aerofs.com/blog/aerofs-is-now-free-up-to-30-users/},
-		April, 2015.
-		
-	\bibitem {aerofs:pricing}
-		\emph{Pricing, AeroFS;}
-		\url{https://www.aerofs.com/pricing/},
-		April, 2015.
-		
-	\bibitem {aerofs:peering_scheme}
-		\emph{Security Share and Transfer Large Files, Enterprise Solution, Aerofs;}
-		\url{https://www.aerofs.com/solutions/transfer-large-files/},
-		April, 2015.
-		
-	\bibitem {aerofs:peering_scheme_2}
-		\emph{Flexible Storage for the Enterprise;}
-		\url{https://www.aerofs.com/features/flexible-storage/},
-		April, 2015.
-		
-	\bibitem {aerofs:security}
-		\emph{Security, AeroFS;}
-		\url{https://www.aerofs.com/security/},
-		April, 2015.
-		
-	\bibitem {aerofs:security_2}
-		\emph{AeroFS: Das bessere Dropbox? - Golem.de;}
-		\url{http://www.golem.de/news/aerofs-das-bessere-dropbox-1304-98485.html},
-		April, 2015.
-		
-	\bibitem {aerofs:storage_types}
-		\emph{What Storage Types Can I Use With The AeroFS Team Server? - AeroFS Support;}
-		\url{https://support.aerofs.com/hc/en-us/articles/203434524},
-		April, 2015.
-		
-	\bibitem {aerofs:cloud_types}
-		\emph{Enterprise Solution - Deployment Options, AeroFS;}
-		\url{https://www.aerofs.com/features/deployment-options/},
-		April, 2015.
-		
-	\bibitem {aerofs:USTO.RE}
-		Dur\~ao et al:
-		\emph{USTO.RE: A Private Cloud Storage Software System;}
-		\url{http://www.researchgate.net/profile/Vinicius_Garcia/publication/262284124_USTO.RE_a_private_cloud_storage_software_system/links/5457a3f30cf2cf51648219ed.pdf},
-		April, 2015.
-		
-	\bibitem {wikimedia:p2p}
-		\emph{Peer-to-peer;}
-		\url{http://en.wikipedia.org/wiki/Peer_to_peer},
-		April, 2015.
-		
-	\bibitem {thefreedictionary}
-		\emph{File Storage Definition;}
-		\url{http://encyclopedia2.thefreedictionary.com/file+storage},
-		April, 2015.
-		
-	\bibitem {p2p:definition}
-		R. Schollmeier:
-		\emph{A Definition of Peer-to-Peer Networking for the Classification of Peer-to- Peer Architectures and Applications;}
-		\url{http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=990434&tag=1},
-		April, 2015.
-		
-	\bibitem {tomp2p:p2p_introduction}
-		\emph{TomP2P, a P2P-based key-value pair storage library}
-		\url{http://tomp2p.net/doc/p2p/},
-		April, 2015.
-
-	\bibitem {tomp2p}
-		\emph{TomP2P, a P2P-based high performance key-value pair storage library}
-		\url{http://tomp2p.net},
-		April, 2015.
-
-	\bibitem {tomp2p:github}
-		\emph{TomP2P, a P2P-based high performance key-value pair storage library}
-		\url{https://github.com/tomp2p/TomP2P},
-		April, 2015.
+		online accessed at March, 2015.
 
 	\bibitem {peerwasp}
 		\emph{Peerwasp, P2P File Synchronization and Sharing Solution based on Hive2Hive and TomP2P}
 		\url{http://www.peerwasp.com/},
-		April, 2015.
+		online accessed at April, 2015.
 
 	\bibitem {peerwasp:github}
 		\emph{Peerwasp, P2P File Synchronization and Sharing Solution based on Hive2Hive and TomP2P}
 		\url{https://github.com/PeerWasp/PeerWasp},
-		April, 2015.
+		online accessed at April, 2015.
+
+	\bibitem {aerofs:pricing}
+		\emph{Pricing, AeroFS;}
+		\url{https://www.aerofs.com/pricing/},
+		online accessed at April, 2015.
+
+	\bibitem {aerofs:security}
+		\emph{Security, AeroFS;}
+		\url{https://www.aerofs.com/security/},
+		online accessed at April, 2015.
 		
-	\bibitem {dropbox:userbase}
-		\emph{Dropbox Reaches 300M Users;}
-		\url{http://thenextweb.com/insider/2014/05/29/dropbox-reaches-300m-users-adding-100m-users-just-six-months/},
-		April, 2015.
+	\bibitem {aerofs:peering_scheme}
+		\emph{Security Share and Transfer Large Files, Enterprise Solution, Aerofs;}
+		\url{https://www.aerofs.com/solutions/transfer-large-files/},
+		online accessed at April, 2015.
+		
+	\bibitem {storj:PDF}
+		S. Wilkinson:
+		\emph{Storj A Peer-to-Peer Cloud Storage Network;}
+		\url{http://storj.io/storj.pdf/},
+		online accessed at April, 2014.
+		
+	\bibitem {storj:crowdsale}
+		\emph{Storj Deck - Decentralized Cloud;}
+		\url{http://storj.io/Deck.pdf},
+		online accessed at April, 2015.
+
+	\bibitem {storj:earlyaccess}
+		\emph{Storj - Early Access;}
+		\url{http://storj.io/earlyaccess.html},
+		online accessed at April, 2015.
+		
+	\bibitem {storj:github}
+		\emph{Storj Labs;}
+		\url{https://github.com/Storj/},
+		online accessed at March, 2015.
+		
+	\bibitem {storj:deck}
+		\emph{Storj - The Crowdsale;}
+		\url{http://storj.io/crowdsale.html},
+		online accessed at March, 2015.
+		
+	\bibitem {storj:forum}
+		\emph{Storjtalk;}
+		\url{https://storjtalk.org/},
+		online accessed at April, 2015.
+		
+	\bibitem {bittorrentsync}
+		\emph{Sync;}
+		\url{https://www.getsync.com/},
+		online accessed at March, 2015.
+
+	\bibitem {p2p-introduction:tomp2p}
+		\emph{TomP2P: A P2P-based high performance key-value pair storage library;}
+		\url{http://tomp2p.net/doc/p2p/},
+		online accessed at April, 2015.		
+
+	\bibitem {tomp2p}
+		\emph{TomP2P, a P2P-based high performance key-value pair storage library;}
+		\url{http://tomp2p.net},
+		online accessed at April, 2015.
+
+	\bibitem {tomp2p:github}
+		\emph{TomP2P, a P2P-based high performance key-value pair storage library}
+		\url{https://github.com/tomp2p/TomP2P},
+		online accessed at April, 2015.
+
+	\bibitem {tomp2p:p2p_introduction}
+		\emph{TomP2P, a P2P-based key-value pair storage library}
+		\url{http://tomp2p.net/doc/p2p/},
+		online accessed at April, 2015.
+
+	\bibitem {aerofs:USTO.RE}
+		Dur\~ao et al:
+		\emph{USTO.RE: A Private Cloud Storage Software System;}
+		\url{http://www.researchgate.net/profile/Vinicius_Garcia/publication/262284124_USTO.RE_a_private_cloud_storage_software_system/links/5457a3f30cf2cf51648219ed.pdf},
+		online accessed at April, 2015.
+
+	\bibitem {storj:blog:what_is_storj}
+		\emph{What ist Storj?;}
+		\url{http://blog.storj.io/post/87251450053/what-is-storj},
+		online accessed March, 2015.
+
+	\bibitem {aerofs:storage_types}
+		\emph{What Storage Types Can I Use With The AeroFS Team Server? - AeroFS Support;}
+		\url{https://support.aerofs.com/hc/en-us/articles/203434524},
+		online accessed at April, 2015.
 
 \end{thebibliography}
